force-app/main/default/objects/Training__c/fields/Course_Image__c.field-meta.xml
<CustomField>
    <fullName>Course_Image__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Course Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>