force-app/main/default/objects/Training__c/fields/Course_URL__c.field-meta.xml
<CustomField>
    <fullName>Course_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Course URL</label>
    <type>Url</type>
</CustomField>