force-app/main/default/objects/Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Applicable_For__c</columns>
    <columns>Course_Type__c</columns>
    <columns>Course_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>